k8s/rahul-deplyment/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-v1
  namespace: rs-web-app
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
