k8s/rahul-deplyment/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-v2
  namespace: rs-web-app
spec:
  selector:
    app: nginx-v2
  ports:
  - port: 80
    targetPort: 80
