k8s/rahul-deplyment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: rs-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.example.com
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: nginx-service-v1
            port:
              number: 8181
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: nginx-service-v2
            port:
              number: 9191
